--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,46 @@
-body {
+* {
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
-} */
+body {
+  height: 100vh;
+  background: #f4f4f4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.App {
+  background: #f8f8f8;
+  width: 320px;
+
+  /* padding: 1rem;
+  margin-top: 1rem; */
+  box-shadow: 0 9px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.screen {
+  height: 40px;
+  width: 100%;
+  background: gray;
+  color: #f4f4f4;
+  padding-top: 10px;
+  float: right;
+}
+
+.btns {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.btn {
+  height: 40px;
+  width: 80px;
+}
+
+.btn1{
+  background: rgb(255, 81, 0);
+}
