--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 .screen {
-  height: 40px;
+  height: 45px;
   width: 100%;
   background: gray;
   color: #f4f4f4;
@@ -31,16 +31,22 @@ body {
 }
 
 .btns {
-  padding-top: 40px;
+  padding-top: 45px;
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
 
 .btn {
-  height: 40px;
+  height: 45px;
   width: 80px;
+  background: lightgray;
+  border:0.1px solid rgb(235, 234, 234);
 }
 
+/* .zero{
+  width: 160px;
+} */
+
 .btn1{
-  background: rgb(255, 81, 0);
+  background: rgb(255, 123, 0);
 }
