--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,11 @@ body {
   background: gray;
   color: #f4f4f4;
   padding-top: 10px;
-  float: right;
+  text-align: end;
+  padding-right: 5px;
 }
 
 .btns {
-  padding-top: 45px;
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
@@ -43,9 +43,10 @@ body {
   border:0.1px solid rgb(235, 234, 234);
 }
 
-/* .zero{
+.zero{
   width: 160px;
-} */
+  grid-column: 1/3;
+}
 
 .btn1{
   background: rgb(255, 123, 0);
