--- a/src/index.css
+++ b/src/index.css
@@ -15,22 +15,20 @@ body {
 .App{
   background: #f8f8f8;
   width: 620px;
-  height: 620px;
   box-shadow: 0 9px 15px -3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
 }
 
 .quote{
-  position: relative;
-  top: 7px;
   background: #f8f8f8;
-  width: 620px;
-  height: 340px;
-  box-shadow: 0 9px 15px -3px rgba(0, 0, 0, 0.1);
-  overflow: scroll;
+  width: 300px;
 }
 
-.quote::-webkit-scrollbar{
-  width: 0;
+.load{
+  position: relative;
+  left: 70px;
+  top: 120px;
 }
 
 h1{
@@ -40,13 +38,12 @@ h1{
 
 .quotes{
 position: relative;
-  left: 8px;
+  left: 20px;
+  top: 20px;
+  padding-right: 20px;
 }
 
 .calculate {
-  position: relative;
-  left: 150px;
-  top: 5px;
   background: #f8f8f8;
   width: 320px;
   box-shadow: 0 9px 15px -3px rgba(0, 0, 0, 0.1);
